<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp" />
        <item android:id="@+id/cam"
            android:title="@string/cam"
            android:icon="@drawable/ic_photo_camera_black_24dp" />
        <item android:id="@+id/nav"
            android:title="@string/nav"
            android:icon="@drawable/ic_nav_black_24dp" />
        <item android:id="@+id/images"
            android:title="@string/local_db"
            android:icon="@drawable/ic_image_black_24dp" />
        <item android:id="@+id/service"
            android:title="@string/api_calling"
            android:icon="@drawable/ic_image_black_24dp" />


</menu>